[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Aleksandr Kravtsov <sabahtalateh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.6", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.14.1"
